--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/purchaseorders.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/purchaseorders.html
@@ -6,7 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
 
@@ -93,26 +93,12 @@
     </div>
     <a class="amel-table-list-identifier">Purchase Orders:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
+    <a href="{% url 'allifmaalcommonapp:commonPurchaseOrders' user_var glblslug %}">Purchase Orders</a>
     <a href="{% url 'allifmaalcommonapp:commonNewPurchaseOrder' user_var glblslug %}">New PO</a>
+
+    
+   
  
- 
-  
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a></li>
-      
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
   </div>
   
       </div><!--end....header column-->
@@ -125,102 +111,158 @@
     
     <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"> <!--start....table column-->
-      
-    <div class="allif-scroll-table"> 
+    
+  
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
     <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row" >
-      <td>P.O. Ref. No.</td>
-      <td>Description</td>
-      <td>Supplier</td>
-      <td>Amount</td>
-      <td>Misc Costs</td>
-      <td>Tax</td>
-      <td>Grand Total</td>
-      <td>Date</td>
-   
-      </tr>
-      </thead>
-      <tbody class="allif-table-body">
+      <thead>
+        <tr class="allif-table-header-row">
+        <td class="allif-fix-table-col">P.O. Ref. No.</td>
+     
+        <td>Supplier</td>
+        <td>Amount</td>
+        <td>Misc Costs</td>
+        <td>Tax</td>
+        <td>Grand Total</td>
+        <td>Date</td>
+     
       
-      
-      {% for item in allifqueryset %}   
-      <tr>
-      
-      <td>
-      <a href="{% url 'allifmaalcommonapp:commonAddPODetails' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.po_number}}
-      </a></td>
-      <td>
-        {{item.description}}
+        <td>Navigate</td>
+        
+        <td> . . . </td>
+        <td></td>
+        </tr>
+        </thead>
+        <tbody class="allif-table-body">
+         
+        
+        {% for item in allifqueryset %} 
+        <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddPODetails' item.id user_var glblslug %}">{{item.po_number}}</a></td>
+       
+        <td>
+        {{item.supplier}}
       </td>
       <td>
-      {{item.supplier}}
-    </td>
-    <td>
+        
+        <a href="{% url 'allifmaalcommonapp:commonAddPOItems' item.id user_var glblslug %}" class="allif-table-links">
+        {{item.amount|floatformat:2|intcomma}}
+        </a>
+      </td>
+      <td>
+        
+        <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
+        {{item.misccosts|floatformat:2|intcomma}}
+        </a>
+      </td>
+      <td>
+        <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
+        {{item.taxamount|floatformat:2|intcomma}}
+        </a>
+      </td>
+      <td>
+        <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
+        {{item.grandtotal|floatformat:2|intcomma}}
+        </a>
+      </td>
+      <td>
+        {{item.date|date:'d/m/Y'}}
+      </td>
+        
+         <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonAddPODetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="{% url 'allifmaalcommonapp:commonPOToPdf' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Download</a>
+              
+              
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonPurchaseOrders' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeletePO' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+       <td> . . . </td>
+       <td></td>
       
-      <a href="{% url 'allifmaalcommonapp:commonAddPOItems' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.amount|intcomma}}
-      </a>
-    </td>
-    <td>
-      
-      <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.misccosts|intcomma}}
-      </a>
-    </td>
-    <td>
-      <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.taxamount|intcomma}}
-      </a>
-    </td>
-    <td>
-      <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.grandtotal|intcomma}}
-      </a>
-    </td>
-    <td>
-      {{item.date|date:'d/m/Y'}}
-    </td>
-   
-  </tr>
+  
+    </tr>
     {% endfor %}
     {% if searched_data %}
-    {% for item in searched_data %}   
-    <tr>
-   
-      <td>
-      <a href="{% url 'allifmaalcommonapp:commonPODetails' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.po_number}}
-      </a></td>
-      
+    {% for item in searched_data %}
+    <tr data-id="{{item.id}}">
+      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddPODetails' item.id user_var glblslug %}">{{item.po_number}}</a></td>
+     
       <td>
       {{item.supplier}}
-     </td>
-     <td>
+    </td>
+    <td>
       
       <a href="{% url 'allifmaalcommonapp:commonAddPOItems' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.amount|intcomma}}
+      {{item.amount|floatformat:2|intcomma}}
       </a>
-     </td>
-    
-     <td>
+    </td>
+    <td>
+      
+      <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
+      {{item.misccosts|floatformat:2|intcomma}}
+      </a>
+    </td>
+    <td>
+      <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
+      {{item.taxamount|floatformat:2|intcomma}}
+      </a>
+    </td>
+    <td>
+      <a href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' item.id user_var glblslug %}" class="allif-table-links">
+      {{item.grandtotal|floatformat:2|intcomma}}
+      </a>
+    </td>
+    <td>
       {{item.date|date:'d/m/Y'}}
-     </td>
-     <td>
-      {{item.department}}
-     </td>
+    </td>
       
-      
-    
-      </tr>
-      {% endfor %}
-      {% endif %}
- 
-  </tbody>
-    </table>
+       <td>
+        <div class="dropdown allifmaal-content-dropdown">
+          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+          <div class="dropdown-content">
+            <a href="{% url 'allifmaalcommonapp:commonAddPODetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+            <a href="{% url 'allifmaalcommonapp:commonPOToPdf' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Download</a>
+            
+            
+            <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+            
+          </div>
+        </div>
+        <div class="dropdown allif-confirm-action">
+          
+          <a href="{% url 'allifmaalcommonapp:commonPurchaseOrders' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+          <a href="{% url 'allifmaalcommonapp:commonDeletePO' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+        </div>
 
-  </div>
+       
+      </td>
+     <td> . . . </td>
+     <td></td>
+    
+
+  </tr>
+    {% endfor %}
+      {%endif %}
+
+      </tbody>
+    </table>
+    </div>
+   </div>
+
   
   </div><!--end....table column-->
   </div>
