--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -6,105 +6,188 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-    <a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddStockCat' user_var glblslug %}">New Stock Category</a>
+<div class="row mt-12" ><!--start....header row-->
+
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+  <a href="{% url 'allifmaalcommonapp:commonStocks' user_var glblslug %}">Stocks</a>
  
- 
+</div>
+
+    </div><!--end....header column-->
   
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a></li>
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Stock Item</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
       
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-  </div>
-  
-      </div><!--end....header column-->
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
     
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
+        </tr>
+        
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Category</td>
+              <td>{{form.category}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Inventory A/C</td>
+                <td>{{form.inventory_account}}</td>
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Income A/C</td>
+                <td>{{form.income_account}}</td>
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Pay From A/C</td>
+                <td>{{form.expense_account}}</td>
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Tax Rate</td>
+                <td>{{form.taxrate}}</td>
+              </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
     
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+         
+              <tr>
+                <td class="allif-fix-table-col">Part Number</td>
+                <td>{{form.partNumber}}</td>
+            
+                </tr>
+          <tr>
+            <td class="allif-fix-table-col">Description</td>
+            <td>{{form.description}}</td>
+        
+            </tr>
 
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="table-details-content-description">Add/Edit New Stock Item</div>
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-          <div class="col-md-4"><!--start of column 1-->
-            <div class="card shadow text-left p-3 allif-form-card" >
-              <label>Division Name</label> {{form.division}}
-              <label>Branch Name</label> {{form.branch}}
-              <label>Department Name</label> {{form.department}}
-                <label>Category</label> {{form.category}}
-                <label>Part Number</label> {{form.partNumber}}
-                <label>Description</label> {{form.description}} 
+            <tr>
+              <td class="allif-fix-table-col">Quantity</td>
+              <td>{{form.quantity}}</td>
+          
+              </tr>
+
+              <tr>
+                <td class="allif-fix-table-col">Buying Price</td>
+                <td>{{form.buyingPrice}}</td>
+            
+                </tr>
+
+                <tr>
+                  <td class="allif-fix-table-col">Unit Cost</td>
+                  <td>{{form.unitcost}}</td>
+              
+                  </tr>
+                  
+            
+                  
+          </tbody>
+          </table>
           </div>
-            </div><!--end of column 1-->
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Standard Cost</td>
+            <td>{{form.standardUnitCost}}</td>
         
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-             
-              <label>Quantity</label>{{form.quantity}}
-                <label>Buying Price</label>{{form.buyingPrice}}
-                
-                <label>Unit Cost</label>{{form.unitcost}} 
-              
-                <label>Standard Cost</label>{{form.standardUnitCost}} 
-                <label>Unit Price</label>{{form.unitPrice}} 
-               
-                
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              
-                <label>Inventory Account</label>{{form.inventory_account}}
-                <label>Income Account</label>{{form.income_account}}
-                <label>Pay From Account</label>{{form.expense_account}}
-                <label>Comments</label>{{form.comments}}
-                <label>Tax Rate</label>{{form.taxrate}}
-                <label>Critial Number</label>{{form.criticalnumber}}
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Unit Price</td>
+              <td>{{form.unitPrice}}</td>
+          
+              </tr>
+          <tr>
+            <td class="allif-fix-table-col">Critical No.</td>
+            <td>{{form.criticalnumber}}</td>
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Comments</td>
+            <td>{{form.comments}}</td>
+          </tr>
+
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
+   
+
    
