--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-details.html
@@ -6,239 +6,324 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Actions
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-           
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddPODetails' allifquery.id user_var glblslug %}">Edit Item</a></li>
+<div class="row mt-12" ><!--start....header row-->
+
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+<div class="dropdown allifmaal-content-dropdown">
+  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+  Actions
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <div class="content-dropdown-menu">
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddPODetails' allifquery.id user_var glblslug %}">Edit Item</a></li>
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddPOItems' allifquery.id user_var glblslug %}">Add Item</a></li>
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPOMiscCost' allifquery.id user_var glblslug %}">Misc Costs</a></li>
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCalculatePOMiscCosts' allifquery.id user_var glblslug %}">Calculate PO Misc Costs</a></li>
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostPO' allifquery.id user_var glblslug %}">Post PO</a></li>
           <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPOToPdf' allifquery.id user_var glblslug %}">PO to pdf</a></li>
 
-          <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeletePO' allifquery.id user_var glblslug %}">Delete Item</a></li>
+        <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeletePO' allifquery.id user_var glblslug %}">Delete Item</a></li>
     
-       </div>
-      </ul>
-    </div>
+   </div>
+  </ul>
+</div>
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
-    
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
- 
-  <a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
+<a href="{% url 'allifmaalcommonapp:commonPurchaseOrders' user_var glblslug %}">Purchase Orders</a>
+
+
+</div>
+
+    </div><!--end....header column-->
   
-  <a href="{% url 'allifmaalcommonapp:commonAddExpense' user_var glblslug %}">Add New</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="table-content-description"> {{allifquery}} </div>
-    <div class="allif-details-container">
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+  <div class="allifmaincontainer">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-      
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-              <tr>
-                <td>Company</td>
-                <td>{{allifquery.company}}</td>
-            
-                </tr>
-              <tr>
-                <td>Division</td>
-                <td>{{allifquery.division}}</td>
-            
-                </tr>
-                <tr>
-                  <td>Branch</td>
-                  <td>{{allifquery.branch}}</td>
-              
-                  </tr>
-              <tr>
-                <td>Department</td>
-                <td>{{allifquery.department}}</td>
-            
-                </tr>
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+
+        <tr>
+          <td class="allif-fix-table-col">Company</td>
+          <td>{{allifquery.company}}</td>
+          </tr>
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{allifquery.division}}</td>
+        </tr>
+      <tr>
+        <td class="allif-fix-table-col">Branch</td>
+        <td>{{allifquery.branch}}</td>
+        </tr>
+     
+        <tr>
+          <td class="allif-fix-table-col">Description</td>
+          <td>{{allifquery.description}}</td>
+          </tr>
+
           <tr>
-            <td>Description</td>
-            <td>{{allifquery.description}}</td>
-        
+            <td class="allif-fix-table-col">Terms</td>
+            <td>{{allifquery.payment_terms}}</td>
             </tr>
-           
             <tr>
-              <td>Terms</td>
-              <td>{{allifquery.payment_terms}}</td>
-              
-            </tr>
+              <td class="allif-fix-table-col">Department</td>
+              <td>{{allifquery.department}}</td>
+              </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+
+        
+              <tr>
+                <td class="allif-fix-table-col">Supplier</td>
+                <td>{{allifquery.supplier}}</td>
+                </tr>
+               
+                 
+                      <tr>
+                        <td class="allif-fix-table-col">PO Amount</td>
+                        <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
+                        </tr>
+
+                        <tr>
+                          <td class="allif-fix-table-col">Misc Costs</td>
+                          <td>{{allifquery.misccosts|floatformat:2|intcomma}}</td>
+                          </tr>
+                          <tr>
+                            <td class="allif-fix-table-col">Taxes</td>
+                            <td>{{allifquery.taxamount|floatformat:2|intcomma}}</td>
+                            </tr>
+                            <tr>
+                              <td class="allif-fix-table-col">Grand Total</td>
+                              <td>{{allifquery.grandtotal|floatformat:2|intcomma}}</td>
+                              </tr>
+                              <tr>
+                                <td class="allif-fix-table-col">Uplift</td>
+                                <td>{{allifquery.uplift|floatformat:2|intcomma}}</td>
+                                </tr>
+       
           </tbody>
           </table>
-        
           </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-            <tr>
-              <td>PO Amount</td>
-              <td>{{allifquery.amount|intcomma}}</td>
-          
-              </tr>
-            <tr>
-              <td>Misc Costs</td>
-              <td>{{allifquery.misccosts|intcomma}}</td>
-          
-              </tr>
-             
-              <tr>
-                <td>Taxes</td>
-                <td>{{allifquery.taxamount}}</td>
-                
-              </tr>
-              <tr>
-                <td>Grand Total</td>
-                <td>{{allifquery.grandtotal|intcomma}}</td>
-                
-              </tr>
-      
-            <tr>
-              <td>Uplift</td>
-              <td>{{allifquery.uplift|intcomma}}</td>
-          
-              </tr>
-             
-        <tr>
-          <td>Comments</td>
-          <td>{{allifquery.comments}}</td>
-          
-        </tr>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
         
+<tr>
+  <td class="allif-fix-table-col">Description</td>
+  <td>{{allifquery.description}}</td>
+  </tr>
+<tr>
+  <td class="allif-fix-table-col">Created By</td>
+  <td>{{allifquery.owner}}</td>
+  </tr>
+
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
+            </tr>
+          
+            <tr>
+              <td class="allif-fix-table-col">Comments</td>
+              <td>{{allifquery.comments}}</td>
+          
+          </tr> 
+          <tr>
+            <td class="allif-fix-table-col">Posting Status</td>
+            <td>{{allifquery.posting_po_status}}</td>
         
-        </tbody>
-        </table>
+        </tr> 
+
+          
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-           
-    <tr>
-    <td>Comments</td>
-    <td>{{allifquery.comments}}</td>
-
-
-    </tr>
-    <tr>
-      <td>Posting Status</td>
-      <td>{{allifquery.posting_po_status}}</td>
-      
-    </tr>
-     
-    <tr>
-      <td>Created By</td>
-      <td>{{allifquery.owner}}</td>
-  
-      
-      </tr> 
-        <tr>
-          <td>Created On</td>
-          <td>{{allifquery.date|date:'d/m/Y'}}</td>
-        </tr>
-      
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
-          <hr>
 
 </div><!--end....table row-->
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-            <div class="col-md-4"><!--start of column 1-->
-                <div class="card shadow text-left p-3 allif-form-card" >
-                  <label>Division Name</label> {{form.division}}
-                  <label>Branch Name</label> {{form.branch}}
-                  <label>Department Name</label> {{form.department}}
-                  <label>Supplier</label> {{form.supplier}} 
-                  <label>P.O. Description</label> {{form.description}} 
-                </div>
-            </div><!--end of column 1-->
-        
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-             
-              <label>Items Costs</label> {{form.amount}} 
-              <label>Tax Amount</label> {{form.taxamount}} 
-              <label>Shipping & Other Misc. Costs</label> {{form.misccosts}} 
-              <label>Grand Total</label> {{form.grandtotal}} 
-             
-                 
-
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Mark Up</label>{{form.uplift}} 
-                  
-              <label>Terms</label> {{form.payment_terms}}
-              <label>Comments</label> {{form.comments}} 
-                 
-              <label>Status</label> {{form.posting_po_status}} 
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
-</div><!--end....table row-->
-
+</div>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+<hr>
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit Purchase Order Details</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
+        
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Supplier</td>
+            <td>{{form.supplier}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Description</td>
+              <td>{{form.description}}</td>
+          
+              </tr>
+             
+          
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+
+        
+          <tr>
+            <td class="allif-fix-table-col">Amount</td>
+            <td>{{form.amount}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Tax Amount</td>
+              <td>{{form.taxamount}}</td>
+          
+              </tr>
+         
+                  <tr>
+                    <td class="allif-fix-table-col">Shipping & Other Misc. Costs</td>
+                    <td>{{form.misccosts}}</td>
+                
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Grand Total</td>
+                      <td>{{form.grandtotal}}</td>
+                  
+                      </tr>
+                   
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+
+            <tr>
+              <td class="allif-fix-table-col">Uplift</td>
+              <td>{{form.uplift}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Terms</td>
+                <td>{{form.payment_terms}}</td>
+            
+                </tr>
+          
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Status</td>
+                  <td>{{form.posting_po_status}}</td>
+              
+                  </tr>
+
+                
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+
+<hr>
+
+</div>
+</div>
   {% block scripts %}
 
   {% endblock %}
