--- a/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-items.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/purchases/add-po-items.html
@@ -39,7 +39,7 @@
           <table class="table table-layout">
             <thead>
               <tr class="allif-table-header-row">
-              <td class="allif-fix-table-col">Description</td>
+              <td>Description</td>
          
           
           <td>Quantity</td>
